# terminal_rpg

./: Cargo.toml
src/: game_features.rs  main.rs
src/assets/items/: Bow.json  gold_sword.json  iron_sword.json
src/assets/saved_characters/: random_berserker.json  random_item.json
